Use ViewChild to attach behaviour

--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,6 +2,7 @@
   <div class="form-group">
     <label for="technology">Technology</label>
     <input
+      #technology
       formControlName="technology"
       type="text"
       class="form-control"
