--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,8 +1,9 @@
 <form [formGroup]="form" (ngSubmit)="addTechnology()" class="container">
   <div class="form-group">
     <label for="technology">Technology</label>
+    <!-- CD is an attribute directive for focus -->
     <input
-      #technology
+      ad-focus
       formControlName="technology"
       type="text"
       class="form-control"
@@ -10,7 +11,9 @@
       aria-describedby="technologyHelp"
     />
     <div *ngIf="technology.errors && !technology.pristine">
-        <small *ngIf="technology.errors.required" class="form-text text-muted">Please, enter a technology.</small>
+      <small *ngIf="technology.errors.required" class="form-text text-muted"
+        >Please, enter a technology.</small
+      >
     </div>
   </div>
   <div class="form-group">
@@ -23,11 +26,17 @@
       aria-describedby="experienceHelp"
     />
     <div *ngIf="experience.errors && !experience.pristine">
-        <small *ngIf="experience.errors.required" class="form-text text-muted">Please, enter an experience.</small>
-        <small *ngIf="experience.errors.pattern" class="form-text text-muted">Please, use only numbers.</small>
+      <small *ngIf="experience.errors.required" class="form-text text-muted"
+        >Please, enter an experience.</small
+      >
+      <small *ngIf="experience.errors.pattern" class="form-text text-muted"
+        >Please, use only numbers.</small
+      >
     </div>
   </div>
   <div class="form-group d-flex justify-content-end">
-    <button [disabled]="!form.valid" type="submit" class="btn btn-primary">Submit</button>
+    <button [disabled]="!form.valid" type="submit" class="btn btn-primary">
+      Submit
+    </button>
   </div>
 </form>
